--- a/ember/index.html
+++ b/ember/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>L2Ember - Server Ruby</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" defer></script>
   <title>L2Ember - Server Ruby</title><meta property="og:title" content="L2Ember - Server Ruby" ><meta property="og:site_name" content="L2Ember" ><meta property="og:type" content="website" ><meta property="og:url" content="https://l2ember.online/" ><meta name="description" content="L2Ember - Server Ruby!" ><meta property="og:description" content="L2Ember - Server Ruby!" ><meta property="twitter:description" content="L2Ember - Server Ruby!" ><meta name="keywords" content="mmoweb, mmoweb4,lineage2, interlude, legacy, essence" ><meta charset="utf-8" ><meta name="viewport" content="width=device-width" ><link rel="shortcut icon" href="/template/site/default/images/favicon.ico" ><script src="https://www.googletagmanager.com/gtag/js?id=G-YTB7MBJKNJ" async="true" ></script><script>window.dataLayer = window.dataLayer || []; 
             function gtag(){dataLayer.push(arguments);} 
             gtag('js', new Date()); gtag('config', 'G-YTB7MBJKNJ');</script><script>   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
